# ExposureStats

./: .env.example  .gitignore  README.md  Taskfile.yml  install_nbs.sh  install_tools.sh  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: ci.yaml
.task/checksum/: lint
docker/: .dockerignore  README.md  compose.yaml  dockerfile
docs/: .$DB ERD 20241223.drawio.bkp  AITagger 20241221.excalidraw  DB ERD 20241223.drawio  DB ERD.drawio  aitagger.txt
exposurestats/: PhotoLibrary Project.py  app.py  cli.py  config.py  data_source.py  exposurestats.py  pyproject.toml  requirements.in
exposurestats/src/exposurestats/: app.py  cli.py  data_source.py
notebook/: Datatabase Explorer.py  Exposure Stats NB1.py  Exposure Stats NB2.py  Exposure Stats NB3.py  PhotoLibrary Project.py
src/exposurestats/: ai_tagger.py  app.py  cli.py  config.py  data_source.py  db.py  image.py  image_processing.py  pyproject.toml  requirements.in  requirements.txt
src/exposurestats/src/: config.py
src/exposuretools/: ratings.py
tests/: test_ai_tagger.py  test_data_source.py  test_db.py  test_exposure_stats.py  test_image.py  test_image_processing.py
tests/testdata/: P9220262dxoap.jpg.exposurex7  sample_ImageData.parquet
