[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["exposurestats"]
namespaces = false

[project]
# license = "MIT"
name = "exposurestats"
version = "1.2.0.alpha"
description = "Exposure Stats"
authors = [{ name = "Luís Seabra", email = "luismvseabra@sgmail.com" }]
requires-python = ">=3.12"
dependencies = ["streamlit"]
classifiers = ["Programming Language :: Python :: 3.10"]
#-------------------

[tool.black]
line-length = 120
