[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "exposurestats"
version = "1.7.0"
description = "Exposure Stats"
authors = [{ name = "Luís Seabra", email = "luismvseabra@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["streamlit"]
classifiers = ["Programming Language :: Python :: 3.12"]
#-------------------

[tool.ruff]
line-length = 120
extend-exclude = ["scripts", "data"]
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []
