[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

# [tool.setuptools.packages.find]
# where = ["."]
# include = ["exposurestats"]
# namespaces = false

[project]
name = "exposurestats"
version = "1.2.1"
description = "Exposure Stats"
authors = [{ name = "Luís Seabra", email = "luismvseabra@sgmail.com" }]
requires-python = ">=3.12"
#dependencies = ["streamlit"]
classifiers = ["Programming Language :: Python :: 3.12"]
#-------------------

[tool.black]
line-length = 120
